# tool-landscape

./: .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
data/: resolved_identifiers.json
data/seed/: backend_tools_catalog.json  curated_edges.json  document_tools_catalog.json  frontend_tools_catalog_a.json  frontend_tools_catalog_b.json  gamedev_tools_catalog.json  llm_tools_catalog.json  mlops_tools_catalog.json  platform_tools_catalog.json  project_ceilings.json  viz_tools_catalog.json
data/templates/: academic-writing.yaml  api-backend.yaml  data-dashboard.yaml  ml-research-hpc.yaml  ml-research.yaml  modern-frontend.yaml  paper-writing.yaml  refine-prompt.md  static-site.yaml
docs/: ecosystem-evaluation-results.md  tool-catalog-landscape-research.md  validation-techniques-brainstorm.md
landscape/: export.py
landscape/analysis/: fitness.py  metrics.py  neighborhoods.py  recommend.py  resolve.py  shop.py  validate.py
landscape/cli/: main.py
landscape/db/: connection.py  migrate.py  schema.py
landscape/models/: spec.py
landscape/spec/: __init__.py  build.py  dep_map.py  extract.py  templates.py
scripts/: backfill_mlops.py  rebuild_db.sh  validate_catalogs.py
site/: observablehq.config.js  package-lock.json  package.json
site/src/: compare.md  coverage.md  (+3 more)
specs/: kd-gat-spec.yaml  mapviz-spec.yaml  tool-landscape-spec.yaml
tests/: test_cli.py  test_deps_dev.py  test_fitness.py  test_metrics.py  test_neighborhoods.py  test_recommend.py  test_resolve.py  test_shop.py  test_shop_stack.py  test_spec.py  test_validate.py
(+6 files in other folders)
